--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -57,7 +57,7 @@ jobs:
           fi
           if [ "${{ matrix.combo.sidekiq }}" != "" ] && [ "${{ matrix.combo.sidekiq }}" != "latest" ]; then
             echo "using gemfile gemfiles/sidekiq$-{{ matrix.combo.sidekiq }}.gemfile"
-            bundle config set gemfile "gemfiles/sidekiq-${{ matrix.combo.activesupport }}.gemfile"
+            bundle config set gemfile "gemfiles/sidekiq-${{ matrix.combo.sidekiq }}.gemfile"
           fi
           bundle update
       - name: specs
