--- a/.standard.yml
+++ b/.standard.yml
@@ -3,5 +3,7 @@ ruby_version: 2.5
 format: progress
 
 ignore:
+  - '**/*':
+    - Style/SafeNavigation
   - 'spec/**/*':
     - Lint/UselessAssignment
