--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -54,7 +54,7 @@ jobs:
             gem install bundler --no-document --version ${{ matrix.combo.bundler }}
           fi
           if [ "${{ matrix.combo.sidekiq }}" != "" ] && [ "${{ matrix.combo.sidekiq }}" != "latest" ]; then
-            echo "using gemfile gemfiles/sidekiq$_{{ matrix.combo.sidekiq }}.gemfile"
+            echo "using gemfile gemfiles/sidekiq_${{ matrix.combo.sidekiq }}.gemfile"
             bundle config set gemfile "gemfiles/sidekiq_${{ matrix.combo.sidekiq }}.gemfile"
           fi
           bundle update
