--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -26,14 +26,16 @@ jobs:
         include:
           - ruby: "ruby"
             standardrb: true
+          - ruby: "3.2"
+            appraisal: "sidekiq_7.x"
           - ruby: "3.1"
             appraisal: "sidekiq_7.0"
           - ruby: "3.0"
-            appraisal: "sidekiq_6.5"
+            appraisal: "sidekiq_6.x"
           - ruby: "2.7"
             appraisal: "sidekiq_6.0"
           - ruby: "2.6"
-            appraisal: "sidekiq_5.2"
+            appraisal: "sidekiq_5.x"
           - ruby: "2.5"
             appraisal: "sidekiq_5.0"
     steps:
