--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -26,6 +26,11 @@ jobs:
         include:
           - ruby: "ruby"
             standardrb: true
+            yard: true
+          - ruby: "4.0"
+            appraisal: "sidekiq_8.x"
+          - ruby: "3.4"
+            appraisal: "sidekiq_8.0"
           - ruby: "3.2"
             appraisal: "sidekiq_7.x"
           - ruby: "3.1"
@@ -65,4 +70,7 @@ jobs:
       run: bundle exec rake
     - name: standardrb
       if:   matrix.standardrb == true
-      run:  bundle exec rake standard
+      run:  bundle exec standardrb
+    - name: YARD Documentation
+      if:   matrix.yard == true
+      run:  bundle exec yard doc --fail-on-warning
